bk_ida/gccida/g0/num_sign_bit_copies
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8858:43: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned int  num_sign_bit_copies( rtx x, machine_mode mode) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8869:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+4h] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8875:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+2Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8894:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[modea] == MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8895:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[modea] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8896:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[modea] == MODE_VECTOR_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8897:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8898:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8899:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_VECTOR_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:8987:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
&& ( rtx)x[1] == const_int_rtx[63] 
         ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/combine.c:9202:42: error: use of undeclared identifier 'machine_mode'
LODWORD( v2) = num_sign_bit_copies( x, ( machine_mode)*( ( unsigned __int8 *)x + 2)) 
                                         ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/num_sign_bit_copies/src/obj/combine.o] Error 1
